--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^5.8.5",
     "axios": "^1.5.0",
     "chart.js": "^4.4.0",
+    "dotenv": "^16.3.1",
     "html-react-parser": "^4.2.1",
     "millify": "^6.1.0",
     "moment": "^2.29.4",
