news pages is completed

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -22,6 +22,6 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#001529",
-  "background_color": "#ffffff",
+  "background_color": "#2d3436",
   "description": "Cryptovse is comprehensive platform for cryptocurrencies"
 }
